feat : conjugations added - models and table view

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ flutter:
   assets:
     - assets/data_turkish_words.json
     - assets/data_turkish_rules.json
+    - assets/data_turkish_conjugations.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
