--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
     sdk: flutter
   json_serializable: ^6.0.1
   flutter_staggered_grid_view: ^0.4.0-nullsafety.3
+  workmanager: ^0.5.2
+  flutter_local_notifications: ^18.0.1
+  uuid: ^3.0.4 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
